icon mobile fix

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -47,7 +47,7 @@
   .About .main-title .boyIcon {
     height: 30vw;
     left: -6%;
-    top: -150%;
+    top: -200%;
   }
   .about-info {
     padding: 2rem 1.5rem;
