--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -69,7 +69,7 @@
   .Skills .trophyIcon {
     height: 6rem;
     left: 0%;
-    top: -30%;
+    top: -130%;
   }
   .all-skills .section ul li {
     list-style-type: none;
